Wrap up "Fix missing forced subtitles".

--- a/src/app/admin-view/admin-view.component.scss
+++ b/src/app/admin-view/admin-view.component.scss
@@ -56,7 +56,7 @@
     text-align: right;
   }
 
-  .skip-options, .flag-options {
+  .skip-options, .flag-options, .fix-options {
     display: grid;
     gap: 1em;
     grid-template-columns: auto auto auto;
